app/assets/stylesheets/components/_buttons.scss
input[type='submit'],
.btn {
  -webkit-appearance: none;
  border: 0;
  border-radius: var(--radius-md);
  box-shadow: var(--shadow-border);
  background-color: $white;
  [data-dark='true'] & {
    background-color: $darkless;
    color: $snow;
  }
  color: $black;
  cursor: pointer;
  display: inline-flex;
  font-size: 1rem;
  font-weight: 600;
  justify-content: center;
  align-items: center;
  height: 36px;
  &:not(.menu__content *) {
    min-height: 36px;
  }
  letter-spacing: 0;
  overflow: hidden;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  transition:
    box-shadow 0.125s ease-in-out,
    background-color 0.125s ease-in-out,
    color 0.125s ease-in-out;

  &:hover,
  &:focus,
  &[aria-expanded='true'] {
    transition-duration: 0s;
    background: darken($white, 5%);

    [data-dark='true'] & {
      background-color: lighten($darkless, 5%);
    }
  }

  &:focus-visible {
    box-shadow:
      inset 0 0 0 0.5px map-get($palette, info),
      0 0 0 3px rgba(map-get($palette, info), 0.25) !important;
  }

  // Use .btn-default for buttons that do not have a background class or are not submit inputs
  .btn-default {
    box-shadow: var(--shadow-border);

    &:hover,
    &:focus,
    &[aria-expanded='true'] {
      box-shadow:
        var(--shadow-border-md),
        inset 0 0 0px 0.5px rgba(0, 0, 0, 0.15);
    }
  }

  &.disabled,
  &[disabled='disabled'],
  &:disabled {
    opacity: 0.5;
    cursor: not-allowed;
    pointer-events: none;
  }

  svg {
    width: 24px;
    height: 24px;
    opacity: 0.875;
  }

  > svg {
    &:first-child {
      margin-left: -4px;
      margin-right: 6px;
    }

    &:not(:first-child)[aria-label='down-caret'] {
      margin-left: 6px;
      margin-right: -4px;
    }
  }

  &.bg-primary {
    background-color: saturate(lighten(map-get($palette, primary), 13%), 10%);
    color: darken(map-get($palette, primary), 50%) !important;

    &:hover {
      background-color: saturate(lighten(map-get($palette, primary), 5%), 10%);
    }

    &:active,
    &:focus {
      transition:
        box-shadow 0.125s ease-in-out,
        background-color 0.125s ease-in-out,
        color 0.125s ease-in-out;
      background-color: saturate(map-get($palette, primary), 10%);
    }
  }

  &.bg-smoke {
    background-color: lighten(map-get($palette, smoke), 3%);
    color: darken(map-get($palette, smoke), 50%) !important;

    html[data-dark='true'] & {
      background-color: darken(map-get($palette, slate), 13%);
      color: lighten(map-get($palette, slate), 50%) !important;
    }
  }

  &.bg-blue {
    background-color: lighten(map-get($palette, info), 15%);
    color: darken(map-get($palette, info), 40%) !important;

    &:hover {
      background-color: lighten(map-get($palette, info), 10%);
    }

    &:active,
    &:focus {
      background-color: map-get($palette, info);
      color: darken(map-get($palette, info), 50%) !important;
    }
  }

  &.bg-muted {
    background-color: lighten(map-get($palette, muted), 30%);
    color: darken(map-get($palette, muted), 50%) !important;
    &:hover {
      background-color: lighten(map-get($palette, muted), 25%) !important;
    }
    &:active,
    &:focus {
      background-color: lighten(map-get($palette, muted), 20%) !important;
    }

    &.btn-text {
      color: darken(map-get($palette, muted), 20%) !important;
      background-color: transparent !important;

      &:hover {
        background-color: rgba(map-get($palette, muted), 0.1) !important;
      }
      &:active,
      &:focus {
        background-color: rgba(map-get($palette, muted), 0.15) !important;
      }
    }
  }

  &.bg-warning {
    background-color: map-get($palette, warning);
    color: darken(map-get($palette, warning), 33.3%) !important;

    html[data-dark='true'] & {
      color: darken(map-get($palette, warning), 33.3%) !important;
    }
  }

  &.bg-light-warning {
    transition:
      box-shadow 0.125s ease,
      background-color 0.125s ease;

    background-color: map-get($palette, white) !important;
    color: darken(map-get($palette, warning), 33.3%) !important;

    [data-dark='true'] & {
      background: $darkless !important;
      color: lighten(map-get($palette, warning), 33.3%) !important;
    }

    &:hover {
      background-color: rgba(map-get($palette, warning), 0.125) !important;
    }
  }

  &.bg-purple {
    @include gradient(purple);
    color: darken(map-get($palette, purple), 40%) !important;

    &:hover {
      background: darken(map-get($palette, purple), 5%);
    }
    &:active,
    &:focus {
      background: darken(map-get($palette, purple), 10%);
    }
  }

  &.bg-slate {
    background: lighten(map-get($palette, slate), 25%);
    color: darken(map-get($palette, slate), 40%) !important;

    &:hover {
      background: lighten(map-get($palette, slate), 20%);
    }
    &:active,
    &:focus {
      background: lighten(map-get($palette, slate), 15%);
    }
  }

  &.bg-ai {
    @include gradient(ai);
  }

  &.bg-success {
    background-color: map-get($palette, success);
    color: darken(map-get($palette, success), 40%) !important;

    &:hover {
      background-color: darken(map-get($palette, success), 5%);
    }

    &:active,
    &:focus {
      background-color: darken(map-get($palette, success), 10%);
    }
  }

  &.bg-accent {
    background-color: map-get($palette, accent);
    color: darken(map-get($palette, accent), 50%) !important;

    &:hover {
      background-color: darken(map-get($palette, accent), 5%);
    }
    &:active,
    &:focus {
      background-color: darken(map-get($palette, accent), 10%);
    }
  }

  &.bg-error,
  &.btn--destroy {
    transition:
      box-shadow 0.125s ease,
      background-color 0.125s ease;
    background-color: map-get($palette, white) !important;

    [data-dark='true'] & {
      background-color: $darkless !important;
      color: lighten(map-get($palette, error), 50%);
    }

    [data-dark='false'] & {
      color: map-get($palette, error);
    }

    &:hover {
      background-color: rgba(map-get($palette, primary), 0.125) !important;
    }
  }
}

.btn.bg-info,
input[type='submit'] {
  background-color: lighten(map-get($palette, info), 15%);
  color: darken(map-get($palette, info), 25%) !important;

  [data-dark='true'] & {
    background-color: darken(map-get($palette, info), 30%);
    color: lighten(map-get($palette, info), 40%) !important;
  }

  &:hover {
    background-color: lighten(map-get($palette, info), 10%);
    color: darken(map-get($palette, info), 40%) !important;

    [data-dark='true'] & {
      background-color: darken(map-get($palette, info), 20%);
      color: lighten(map-get($palette, info), 30%) !important;
    }
  }

  &:active,
  &:focus {
    background-color: darken(map-get($palette, info), 10%);
    color: darken(map-get($palette, info), 40%) !important;

    [data-dark='true'] & {
      background-color: map-get($palette, info);
      color: lighten(map-get($palette, info), 50%) !important;
    }
  }
}

.btn-small {
  font-size: 0.875rem;
  font-weight: 600;
  line-height: 1.75;
  padding: 0.25rem 1rem;
}

form .flex-auto + input[type='submit'] {
  height: 2.5rem;
}

.btn-group {
  display: inline-flex;
  align-items: center;

  @media (max-width: 32em) {
    .btn {
      margin-right: 8px;
    }

    &:not(.btn-group--no-wrap) {
      flex-wrap: wrap;

      .btn {
        margin-bottom: 8px;
      }
    }

    &.center {
      justify-content: center;
      .btn {
        margin: 8px;
      }
    }
  }

  @media (min-width: 32em) {
    border-radius: var(--radius-md);

    .btn:first-child {
      border-radius: var(--radius-md) 0 0 var(--radius-md);
    }
    .btn {
      border-radius: 0;
      margin: 0;
    }
    .btn:last-child {
      border-radius: 0 var(--radius-md) var(--radius-md) 0;
    }
  }
}

.quick-action {
  cursor: pointer;
  text-decoration: none;
  display: inline-flex;
  align-items: center;
  gap: 7px;
  font-size: 0.9rem;
  height: 2rem;
  padding: 0 0.75rem;
  transition: all 0.125s ease-in-out;

  & svg {
    margin-bottom: 0px;
    margin-top: 0px;
  }

  &:hover {
    transition-duration: 0s;
    background: rgba(0, 0, 0, 0.05);

    &:active {
      transition-duration: 0.125s;
      background: rgba(0, 0, 0, 0.1);
    }
  }

  [data-dark='true'] & {
    background-color: #252429 !important;

    &:hover {
      transition-duration: 0s;
      background-color: #2e2c33 !important;
    }

    &:active {
      transition-duration: 0.125s;
      background-color: #35333a !important;
    }

    color: lighten(map-get($palette, slate), 50%) !important;

    & svg {
      stroke: lighten(map-get($palette, smoke), 50%) !important;
    }
  }
}

.btn.btn--list-item {
  height: auto !important;
  width: 100% !important;
  justify-content: flex-start;
  gap: 8px;
  text-align: left;
  background-color: transparent !important;
  box-shadow: none;
  padding: 10px 20px !important;

  & p {
    margin: 0;
  }

  &:hover {
    background-color: rgba(200, 200, 200, 0.1) !important;
  }

  &:active,
  &:focus {
    background-color: rgba(200, 200, 200, 0.2) !important;
  }

  & svg {
    padding: 5px;
    width: 35px !important;
    height: 35px !important;
    border-radius: var(--radius-xl);
    background: rgba(map-get($palette, muted), 0.15) !important;
  }

  &.bg-error svg {
    background: rgba(map-get($palette, error), 0.15) !important;

    [data-dark='true'] & {
      background: rgba(lighten(map-get($palette, error), 40%), 0.15) !important;
    }
  }

  &.bg-success svg {
    background: rgba(map-get($palette, success), 0.15) !important;

    [data-dark='true'] & {
      background: rgba(
        lighten(map-get($palette, success), 40%),
        0.15
      ) !important;
    }
  }

  &.bg-success {
    color: map-get($palette, success) !important;
  }
}

.sort-button {
  text-decoration: none;
  display: inline-flex;
  align-items: center;
  justify-content: start;
  width: 100%;
  font-weight: 600;
  transition: color 0.125s ease-in-out;
  gap: 0.5rem;
  color: inherit;

  [data-dark='true'] & {
    color: map-get($palette, white);
  }

  &.sort-button--right {
    justify-content: end;
    flex-direction: row-reverse;
  }

  &:hover,
  &:focus {
    color: map-get($palette, info);
  }

  & svg {
    width: 16px;
    height: 16px;
    fill: currentColor;
    opacity: 0;
    transition:
      opacity 0.125s ease-in-out,
      transform 0.125s ease-in-out;
  }

  &:hover svg,
  &:focus svg {
    opacity: 1;
  }

  &.sort-button--active svg {
    opacity: 1;
  }
}

